# yuban

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  setup_mysql.sql  setup_test.sh  yuban-nginx.conf
docker-db/: Dockerfile  setup_mysql.sql
queries/: get_post.sql  list_groups.sql  list_original_posts.sql  list_posts.sql  list_threads.sql  permission_view_post.sql  setup_mysql.sql  summarize_groups.sql
src/: auth.rs  db.rs  main.rs
src/db/: mod.rs  permissions.rs  transactional.rs
src/routes/: admin.rs  api.rs  fix.rs  mod.rs
src/routes/api/: admin.rs  authentication.rs  meta.rs  mod.rs  modify.rs  query.rs
src/routes/api/user/: authentication.rs  modify.rs  query.rs
webpage/: package-lock.json  package.json
webpage/src/: App.vue  main.ts
webpage/src/components/: Login.ts  Login.vue  PostEditor.ts  PostEditor.vue  PostList.ts  PostList.vue  PostWindow.ts  PostWindow.vue  Postlist.vue  api.ts
webpage/src/router/: index.ts
