[package]
name = "yuban"
version = "0.2.0"
authors = ["Lukas Wölfer <lukas.woelfer@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rand = "0.8.3"
base64 = "0.13.0"
mysql = "20.1.0"
rust-argon2 = "0.8.3"
serde_json = "1"
time = "0.2.26"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.7"
